--- a/styles/app.css
+++ b/styles/app.css
@@ -112,6 +112,27 @@ footer {
     cursor: pointer;
 }
 
+.movie-container--loading { /* esto es para el cuadrito del loading */
+    background: var(--purple-light-2);
+    border-radius: 8px;
+    height: 225px;
+    min-height: 225px;
+    max-height: 225px;
+    width: 150px;
+    min-width: 150px;
+    max-width: 150px;
+    margin-bottom: 15px;
+    animation: loading-skeleton infinite 1.2s;
+}
+
+.movie-container--loading:nth-child(2) { /* esto es para animar la espera - carga de imagenes */
+    animation-delay: .2s;
+}
+
+.movie-container--loading:nth-child(3) {
+    animation-delay: .4s;
+}
+
 .movie-img {
     border-radius: 8px;
 }
@@ -123,6 +144,23 @@ footer {
     justify-content: space-between;
     position: relative;
     flex-wrap: wrap;
+}
+
+.category-container--loading { /* esto es para el cuadrito del loading */
+    background: var(--purple-light-2);
+    border-radius: 8px;
+    height: 25px;
+    min-height: 25px;
+    max-height: 25px;
+    width: 150px;
+    min-width: 150px;
+    max-width: 150px;
+    margin-bottom: 15px;
+    animation: loading-skeleton infinite 1.2s;
+}
+
+.category-container--loading:nth-child(2) { /* esto es para animar la espera - carga de imagenes */
+    animation-delay: .2s;
 }
 
 
@@ -424,4 +462,15 @@ footer {
 /* Navigation */
 .inactive {
     display: none;
+}
+
+
+/* Animations */
+@keyframes loading-skeleton {
+    0%, 100% {
+        opacity: 100%;
+    } 
+    50% {
+        opacity: 0%;
+    }
 }
